strategy names, copy to frontend

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .ts --fix deploy/ ; eslint --ext .ts --fix hardhat.config.ts ; prettier --write contracts/**/*.sol",
     "dev": "hardhat node",
-    "solmerge": "sol-merger --export-plugin SPDXLicenseRemovePlugin \"./contracts/*.sol\" ./flattened"
+    "solmerge": "sol-merger --export-plugin SPDXLicenseRemovePlugin \"./contracts/*.sol\" ./flattened",
+    "push-build": "cp -r build/* ../frontend/src/contracts/"
   },
   "author": "",
   "license": "ISC",
