--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext .ts --fix deploy/ ; eslint --ext .ts --fix hardhat.config.ts ; prettier -w contracts/*.sol; prettier -w interfaces/*.sol; prettier --write contracts/**/*.sol; prettier -w deploy/*.ts",
     "dev": "hardhat node",
     "solmerge": "sol-merger --export-plugin SPDXLicenseRemovePlugin \"./contracts/*.sol\" ./flattened",
-    "push-build": "cp -r build/* ../frontend/src/contracts/"
+    "push-build": "cp -r build/* ../frontend/src/contracts/",
+    "local": "hardhat node"
   },
   "author": "",
   "license": "ISC",
