--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "@chainlink/contracts": "^0.2.1",
     "@ethersproject/bignumber": "^5.5.0",
     "@ethersproject/units": "^5.5.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@openzeppelin/contracts": "^4.0.0-beta.0",
     "@truffle/hdwallet-provider": "1.2.1",
     "@uniswap/v2-core": "^1.0.1",
     "hardhat-ethernal": "^0.3.2",
+    "ncp": "^2.0.0",
     "sol-merger": "^3.1.0"
   },
   "devDependencies": {
-    "@ethersproject/address": "^5.1.0",
-    "@ethersproject/solidity": "^5.1.0",
+    "@ethersproject/address": "^5.5.0",
+    "@ethersproject/solidity": "^5.5.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
@@ -43,11 +44,11 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "ethereum-waffle": "^3.2.2",
-    "ethers": "^5.0.31",
-    "hardhat": "^2.0.11",
+    "ethers": "^5.5.0",
+    "hardhat": "^2.6.7",
     "hardhat-contract-sizer": "^2.0.3",
-    "hardhat-deploy": "^0.7.0-beta.47",
-    "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "hardhat-deploy": "^0.9.4",
+    "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.7",
     "solc": "0.8.3",
