--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "push-build": "cp -r build/* ../frontend/src/contracts/",
     "start": "hardhat node",
     "compile": "hardhat compile",
-    "deploy-avax": "hardhat deploy --network avalanche --tags base,avalanche ; hardhat export-addresses --network avalanche"
+    "deploy-avax": "hardhat deploy --network avalanche --tags base,avalanche ; hardhat export-addresses --network avalanche",
+    "export-addresses": "hardhat export-addresses --network avalanche"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,7 @@
     "@uniswap/v2-core": "^1.0.1",
     "hardhat-ethernal": "^0.3.2",
     "ncp": "^2.0.0",
+    "node-fetch": "2",
     "sol-merger": "^3.1.0"
   },
   "devDependencies": {
