Add harvester contract

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@openzeppelin/contracts": "^4.0.0-beta.0",
     "@truffle/hdwallet-provider": "1.2.1",
     "@uniswap/v2-core": "^1.0.1",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "hardhat-ethernal": "^0.3.2",
     "ncp": "^2.0.0",
     "node-fetch": "2",
