--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.5.0",
-    "hardhat": "^2.6.7",
+    "hardhat": "2.6.8",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.9.14",
     "hardhat-deploy-ethers": "^0.3.0-beta.11",
