--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .ts --fix deploy/ ; eslint --ext .ts --fix hardhat.config.ts ; prettier -w contracts/*.sol; prettier -w interfaces/*.sol; prettier --write contracts/**/*.sol;",
-    "dev": "hardhat node",
+    "dev": "hardhat node; ./export-addresses.sh hardhat",
     "solmerge": "sol-merger --export-plugin SPDXLicenseRemovePlugin \"./contracts/*.sol\" ./flattened",
     "push-build": "cp -r build/* ../frontend/src/contracts/",
-    "start": "hardhat node",
+    "start": "hardhat node --no-deploy",
+    "local-deploy": "./setup-localhost.sh",
     "compile": "hardhat compile",
-    "deploy-avax": "hardhat deploy --network avalanche --tags base,avalanche ; hardhat export-addresses --network avalanche ; hardhat custom-etherscan --network avalanche",
-    "export-addresses": "hardhat export-addresses --network avalanche"
+    "deploy-avax": "hardhat deploy --network avalanche --tags base,avalanche ; ./export-addresses.sh avalanche ; hardhat custom-etherscan --network avalanche",
+    "export-addresses": "./export-addresses.sh avalanche"
   },
   "author": "",
   "license": "ISC",
