Dev deploy fixes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .ts --fix deploy/ ; eslint --ext .ts --fix hardhat.config.ts ; prettier -w contracts/*.sol; prettier -w interfaces/*.sol; prettier --write contracts/**/*.sol;",
-    "dev": "hardhat node; ./export-addresses.sh hardhat",
+    "dev": "hardhat node",
     "solmerge": "sol-merger --export-plugin SPDXLicenseRemovePlugin \"./contracts/*.sol\" ./flattened",
     "push-build": "cp -r build/* ../frontend/src/contracts/",
     "start": "hardhat node --no-deploy",
