--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@ethersproject/units": "^5.5.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
-    "@openzeppelin/contracts": "^4.4.0",
+    "@openzeppelin/contracts": "4.4.2",
     "@truffle/hdwallet-provider": "1.2.1",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
