--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@chainlink/contracts": "^0.2.1",
     "@ethersproject/bignumber": "^5.5.0",
     "@ethersproject/units": "^5.5.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@openzeppelin/contracts": "4.4.2",
     "@truffle/hdwallet-provider": "1.2.1",
@@ -38,6 +37,7 @@
   "devDependencies": {
     "@ethersproject/address": "^5.5.0",
     "@ethersproject/solidity": "^5.5.0",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
@@ -50,8 +50,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "ethereum-waffle": "^3.2.2",
-    "ethers": "^5.5.0",
-    "hardhat": "2.6.8",
+    "ethers": "^5.5.4",
+    "hardhat": "^2.8.4",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.9.14",
     "hardhat-deploy-ethers": "^0.3.0-beta.11",
