--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ethersproject/units": "^5.5.0",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@openzeppelin/contracts": "4.4.2",
+    "@openzeppelin/contracts-upgradeable": "4.4.2",
     "@truffle/hdwallet-provider": "1.2.1",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
